Added Vert.X web api generated API from Swagger spec and migrated code to Kotlin
